--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ layout: default
   {% if post.link %}
     <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
   {% else %}
-    <h4><a href="{{ post.url }}">{{ post.title }} - {{ post.date | date_to_string }}</a></h4>
-    {% if post.image %}
-        <img src = {{ post.image }} class="sml_image" />
-    {% else %}
-        <p>{{ post.excerpt | strip_html | truncate: 160 }}</p>
-    {% endif %}
+    <h4><a href="{{ post.url }}">
+      {{ post.title }} - {{ post.date | date_to_string }}
+      {% if post.image %}
+          <img src = {{ post.image }} class="sml_image" />
+      {% endif %}
+    </a></h4>
   {% endif %}
 </article>
 {% endfor %}
