--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 ---
 layout: default
+entries_layout: grid
 ---
 
 
 {% for post in paginator.posts %}
-<article>
-  {% if post.link %}
-    <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
-  {% else %}
-    <h4><a href="{{ post.url }}">
-      {{ post.title }} - {{ post.date | date_to_string }}
+    <a href="{{ post.url }}">
       {% if post.image %}
-          <img src = {{ post.image }} class="sml_image" />
+        <img src = {{ post.image }} class="sml_image" />
+      {% else %}
+        <h3>{{ post.title }} - {{ post.date | date_to_string }}</h3>
       {% endif %}
-    </a></h4>
-  {% endif %}
-</article>
+    </a>
 {% endfor %}
 
 {% if paginator.total_pages > 1 %}
