--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@ entries_layout: grid
 </div>
 {% endif %} 
 
-<a href="{{ post.url }}">{{ post.title }}</a> - 
+<a href="{{ post.url }}">{{ post.title }}</a>
 
 
