updated image tags?

--- a/accessibility-challenges.html
+++ b/accessibility-challenges.html
@@ -28,7 +28,7 @@
     <p>Another day of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> wrapped up today. I'm at day 75, and I'm already starting to think about what to work on next. I'm trying to decide between Tensorflow, SpriteKit &amp; Metal, or maybe ARKit. I suppose I need to learn all 3 to get where I'm going, so I should just pick one and dive in. I'll get the most mileage for work out of a Tensorflow challenge, but I think I'll get the furthest drawing-wise out of a SpriteKit &amp; Metal one.</p>
 <p>The accessibility challenges were pretty simple today, except that the Xcode Beta has clobbered accessibility labels and values for <code>Stepper</code>. I continue to be a little baffled by Paul saying "accessibility works best if it's baked in from the beginning and not an afterthought," but then teaching accessibility in a section where we go back and add accessibility to prior projects, which is the definition of afterthought.</p>
 <p>Today's image is from yet another moire sketch, from the <a href="http://www.generative-gestaltung.de/2/">Generative Design book</a>. This time adding blend modes to make it more interesting.</p>
-<p><img alt="Noisy Drag Moire" src="/images/drag_moire_noise.png"></p>
+<p><img src="/images/drag_moire_noise.png" alt="Noisy Drag Moire" width="400" /></p>
 </article>
 
         <footer>
