--- a/accessibility.html
+++ b/accessibility.html
@@ -27,7 +27,7 @@
 <article>
     <p>One more <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> done today. Cool to see accessibility treated in 100 Days of SwiftUI, but I wonder if treating it as an afterthought is really the best approach.</p>
 <p>Today's image is another moire sketch, from the <a href="http://www.generative-gestaltung.de/2/">Generative Design book</a>.</p>
-<p><img alt="Tap Moire" src="/images/tap_moire.png"></p>
+<p><img src="/images/tap_moire.png" alt="Tap Moire" width="400" /></p>
 </article>
 
         <footer>
