--- a/animatabledata-and-spirographs.html
+++ b/animatabledata-and-spirographs.html
@@ -27,9 +27,9 @@
 <article>
     <p>A bit more <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> finished today. </p>
 <p>We covered <code>AnimatableData</code> today, which has already made it across to my <a href="https://github.com/alexshepard/generativeart">Generative Art</a> explorations. In particular, the AnimatedAcrossShapes sketch uses a stack of <code>AnimatablePair</code> structs to stash four animatable <code>CGFloat</code>s on a shape. The spirograph was awesome. I had fun extending the presented material by experimenting with the amount you stride across theta by, to make other geometric shapes.</p>
-<p><img alt="Spiro Stride By" src="/images/spiro_stride.png">
-<img alt="Spiro Stride Two" src="/images/spiro_stride_two.png">
-<img alt="Spiro Stride Gradient" src="/images/spiro_stride_gradient.png"></p>
+<p><img src="/images/spiro_stride.png" alt="Spiro Stride By" width="400" />
+<img src="/images/spiro_stride_two.png" alt="Spiro Stride Two" width="400" />
+<img src="/images/spiro_stride_gradient.png" alt="Spiro Stride Gradient" width="400" /></p>
 </article>
 
         <footer>
