--- a/another-catchup-day.html
+++ b/another-catchup-day.html
@@ -27,7 +27,7 @@
 <article>
     <p>Some catchup on the blog today. I've been mostly keeping up with <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> but haven't been writing. Just feeling a little too overwhelmed with everything. So I'm not going to write much here today, just that I'm done with day 81 and looking forward to wrapping the whole thing up in a few weeks.</p>
 <p>For today's image, another sketch from the <a href="http://www.generative-gestaltung.de/2/">Generative Design book</a>. The big challenge here was how to determine if the actively drawing line intersects with a previously drawn line. In the book they load the pixels and see if the canvas has been draw to at that point, but in Swift I had to do some trig to calculate the distance from a point to a line segment.</p>
-<p><img alt="Intelligent agents" src="/images/intelligent_agents.png"></p>
+<p><img src="/images/Intelligent agents.png" alt="Intelligent agents" width="400" /></p>
 </article>
 
         <footer>
