--- a/bookworm-challenges.html
+++ b/bookworm-challenges.html
@@ -28,7 +28,7 @@
     <p>Ugh, rough day today. Woke up with awful heartburn and I've been useless all day. I did manage to get another day of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> finished. </p>
 <p>The most interesting bit with the challenges today was using an extension on a Core Data class to unwrap and format a date. I've done that sort of thing with ObjC before, but I haven't done much Core Data work with Swift so it's nice to get some practice.</p>
 <p>I also ported another generative art sketch to Swift from the <a href="http://www.generative-gestaltung.de/2/">Generative Design</a> book. Part of the fun at this point is to look at the image in the book, maybe load it up live from their website, then try to implement it in SwiftUI with Canvas without looking at their p5.js code.</p>
-<p><img alt="Jitter quadrilaterals" src="/images/jitter_quad.png"></p>
+<p><img src="/images/jitter_quad.png" alt="Jitter quadrilaterals" width="400" /></p>
 </article>
 
         <footer>
