--- a/bookworm-core-data.html
+++ b/bookworm-core-data.html
@@ -28,7 +28,7 @@
     <p>Well, a bit more <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> done. Today was a real grind at work, super secret handshake project underway and I'm wiped out just from all the phone calls. Time to listen to some Billie Eilish and do some creative coding.</p>
 <p>Nothing much new today with SwiftUI lessons, I've done this kind of persistence work in a dozen apps using Core Data and Realm over the years. Still no word on what the <code>id</code> field in the <code>Book</code> entity was supposed to be used for, or where it was supposed to be initialized. It was nice to see how Core Data plugs into SwiftUI, and how simple it was to make an in-memory <code>moc</code> to handle previews. The persistence parts of my iNat SwiftUI prototype are starting to take shape, at least in my head.</p>
 <p>Here's another generative art sketch ported over to Swift from <a href="http://www.generative-gestaltung.de/2/">Generative Design</a>. I'm really enjoying this book, highly recommend it.</p>
-<p><img alt="Rad grid" src="/images/rad_grid.png"></p>
+<p><img src="/images/rad_grid.png" alt="Rad grid" width="400" /></p>
 </article>
 
         <footer>
