--- a/bookworm.html
+++ b/bookworm.html
@@ -28,8 +28,8 @@
     <p>Yay, another chunk of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> done today. I'm also caught up, the past few days I haven't wrapped up all of the SwiftUI sections and blog posts and generative art on the day proper, so each morning I was finishing up the previous day's work. </p>
 <p>We did more Core Data and SwiftUI in today's session. I'm not sure why Paul didn't have us set the <code>UUID</code> on newly created books, or why we would allow the id to be optional? I peeked ahead and I don't see it fixed in future sessions or challenges, but maybe I missed something. Regardless, really neat to see Core Data and SwiftUI in practice, aside from all the optionals out of Core Data and therefore all the nil coalescing. It feels really nice.</p>
 <p>My generative art stuff is chugging right along, too. One of the fun things I did today was learning how to use a seeded random number generator to let me fiddle with configuration of random inputs without causing all of the randomness / jitter in a design to reset to new random values.</p>
-<p><img alt="Movement in a grid. overlap" src="/images/movement_grid_overlap.png">
-<img alt="Movement in a grid, overlap, 2" src="/images/movement_grid_overlap_2.png"></p>
+<p><img src="/images/movement_grid_overlap.png" alt="Movement in a grid. overlap" width="400" />
+<img src="/images/movement_grid_overlap_2.png" alt="Movement in a grid, overlap, 2" width="400" /></p>
 </article>
 
         <footer>
