--- a/bucketlist-challenges.html
+++ b/bucketlist-challenges.html
@@ -27,8 +27,8 @@
 <article>
     <p>Trying to pull myself together for another <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> this afternoon. Nothing much exciting, just a few challenges.</p>
 <p>More from the <a href="http://www.generative-gestaltung.de/2/">Generative Design book</a> today. Another moire sketch, this time with overlapping rects of parallel lines.</p>
-<p><img alt="Inset Rects" src="/images/rects.png">
-<img alt="Moire Rect" src="/images/moire_rect.png"></p>
+<p><img src="/images/rects.png" alt="Inset Rects" width="400" />
+<img src="/images/moire_rect.png" alt="Moire Rect" width="400" /></p>
 </article>
 
         <footer>
