--- a/building-hot-prospects.html
+++ b/building-hot-prospects.html
@@ -28,7 +28,7 @@
     <p>One more day of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> finished, only 18 left. I'm so close to finishing that I can taste it. I can't wait to move on and start working on my next major thing (most likely doing daily tensorflow / modeling work), but I really need to just stick with this challenge until the end.</p>
 <p>Today we took a bunch of what we learned the past few days and implemented the beginning of a new app, Hot Prospects. It's basically a contact/lead management tool. I think the best part was seeing that Paul was using the environment to store model objects. I've been leaning that way myself, but wasn't sure if it was considered best practice. I guess that's also where we store handles to Core Data contexts, too.</p>
 <p>For today's image, I just made an iteration on yesterday's sketch. Today I increased the number of angles and added color and transparency.</p>
-<p><img alt="Intelligent agents" src="/images/intelligent_agents_color.png"></p>
+<p><img src="/images/intelligent_agents_color.png" alt="Intelligent agents" width="400" /></p>
 </article>
 
         <footer>
