--- a/catching-up.html
+++ b/catching-up.html
@@ -28,7 +28,7 @@
     <p>It’s been about a week since I’ve posted. I’ve managed to mostly stay on top of my <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> work but I have to be honest. I’ve been too drained from family stuff to deal with blogging. Sometimes life just sucks.</p>
 <p>I’ve not got a ton to report, I’ve learned a bunch about interfacing between MapKit and SwiftUI yesterday and today, and hopefully I can bring that to bear on my iNat work.</p>
 <p>Here's a sketch adapted from the <a href="http://www.generative-gestaltung.de/2/">Generative Design book</a>. In the book, they used HTML checkboxes to draw simple images. Here, I'm using the camera to turn SwiftUI <code>Toggle</code> views on and off.</p>
-<p><img alt="Toggles Selfie" src="/images/toggles_selfie.png"></p>
+<p><img src="/images/toggles_selfie.png" alt="Toggles Selfie" width="400" /></p>
 </article>
 
         <footer>
