--- a/comparable.html
+++ b/comparable.html
@@ -28,7 +28,7 @@
     <p>Slowly getting back into the rhythym with <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> after a break. I tackled Day 71 yesterday where we add <code>Comparable</code> conformance to a <code>Codable</code> struct and downloaded some data from Wikipedia.</p>
 <p>Unfortuately, I'm running into a bug where the simulator freezes every minute or two due to a breakpoint inside Apple's stuff, <code>_os_semaphore_dispose.cold.1</code>. The recommendation on the Apple developer forums is to rollback to Xcode Beta 4. I suppose I could upgrade my OS to the beta, since that's probably of why Apple didn't catch it before releasing Xcode Beta 5. Hardly the end of the world, it just makes app development kinda slow.</p>
 <p>Here's a sketch straight out of the <a href="http://www.generative-gestaltung.de/2/">Generative Design book</a>, redone in SwiftUI. Moire from two overlapping sets of concentric circles.</p>
-<p><img alt="Moire Circles" src="/images/moire_circle.png"></p>
+<p><img src="/images/moire_circle.png" alt="Moire Circles" width="400" /></p>
 </article>
 
         <footer>
