--- a/coordinators-and-phimagepickercontroller-2.html
+++ b/coordinators-and-phimagepickercontroller-2.html
@@ -27,7 +27,7 @@
 <article>
     <p>Another day of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> wrapped up today. It was a pretty easy day today, we used what we learned the past few days to get the Instafilter app UI and basic functionality working. </p>
 <p>Here's a sketch from the <a href="http://www.generative-gestaltung.de/2/">Generative Design book</a>. More rotating rects, this time with a gradient.</p>
-<p><img alt="Rotating Rects, Color" src="/images/rotating_rect_color.png"></p>
+<p><img src="/images/rotating_rect_color.png" alt="Rotating Rects, Color" width="400" /></p>
 </article>
 
         <footer>
