--- a/coordinators-and-phimagepickercontroller.html
+++ b/coordinators-and-phimagepickercontroller.html
@@ -27,7 +27,7 @@
 <article>
     <p>Some more <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> finished today. I've used SwiftUI coordinators a few times before, but I think I need some more practice before I'm really comfortable with the pattern. I extended the session by layering in basic support for PHImagePickerController.</p>
 <p>A sketch from the <a href="http://www.generative-gestaltung.de/2/">Generative Design book</a> today, rotating rects turning into moire.</p>
-<p><img alt="Rotating Rects" src="/images/rotate_rects.png"></p>
+<p><img src="/images/rotate_rects.png" alt="Rotating Rects" width="400" /></p>
 </article>
 
         <footer>
