--- a/core-data-and-swiftui.html
+++ b/core-data-and-swiftui.html
@@ -27,7 +27,7 @@
 <article>
     <p>One more day of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> done today. I also have family in town so I'm not doing much else.</p>
 <p>We're tackling Core Data and SwiftUI in this new project, which is super fun. At my day job, working on iNat, we have to do a lot of data persistence so any kind of SwiftUI prototype or version of iNat will have to support data persistence and working in offline mode. It was cool to see all the things you get for free with the Xcode Core Data SwiftUI template - a shared persistence controller, a managed object context in the environment, and a <code>@FetchRequest</code> wrapper.</p>
-<p><img alt="Movement in a grid" src="/images/movement_in_grid.png"></p>
+<p><img src="/images/movement_in_grid.png" alt="Movement in a grid" width="400" /></p>
 </article>
 
         <footer>
