--- a/core-data-challenges.html
+++ b/core-data-challenges.html
@@ -28,7 +28,8 @@
     <p>I haven't been feeling well enough today to be productive in other parts of my life, but at least I got some work done on <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a>.</p>
 <p>Nothing really exciting in Core Data &amp; SwiftUI today - basically just extending a few things we'd already learned in ways that weren't too challenging for me. Using an enum with raw values for the predicate parameter was a nice little bit, definitely the kinds of things that I've needed to do at work.</p>
 <p>Nothing much to report on the Generative Art stuff, today's sketch was an iteration on the one from yesterday.</p>
-<p><img alt="Diamond modules" src="/images/diamond_modules.png"></p>
+<p><img alt="Diamond modules" src="/images/diamond_modules.png">
+<img src="/images/diamond_modules.png" alt="Diamond modules" width="400" /></p>
 </article>
 
         <footer>
