--- a/cupcake-challenges.html
+++ b/cupcake-challenges.html
@@ -28,7 +28,7 @@
     <p>I got a tad more <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> done today, and did some more exciting work on my explorations with the <a href="http://www.generative-gestaltung.de/2/">Generative Design</a> book in SwiftUI.</p>
 <p>Once again the challenges were quite easy - perhaps I've already done enough Swift or SwiftUI, or perhaps I've used Codable a lot already. Or maybe Paul is keeping it simple so that we can build up some confidence. At any rate, the challenges were a breeze. The approach of wrapping struct with an <code>ObservableObject</code> to make <code>Codable</code> compliance on the struct simpler was fun to implement.</p>
 <p>As far as the generative art stuff, I got a lot further in understanding 2d drawing with today's sketch, aligning many copies of an SF Symbol shape in a grid and using the touch location to scale and rotate each symbol.</p>
-<p><img alt="Alignment in a grid with symbols, two" src="/images/alignment_grid_symbols_two.png"></p>
+<p><img src="/images/alignment_grid_symbols_two.png" alt="Alignment in a grid with symbols, two" width="400" /></p>
 </article>
 
         <footer>
