--- a/cupcake-project-ui.html
+++ b/cupcake-project-ui.html
@@ -27,7 +27,7 @@
 <article>
     <p>Welp, another day of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> finished. Today was a rough day, hours of meetings. Some of them were important, but it was still exhausting.</p>
 <p>Nothing at all new when building the UI for the Cupcake app, so it was a nice easy day there. Meanwhile I did a new sketch for my <a href="https://github.com/alexshepard/generativeart">Generative Art</a> work, porting the sketch titled "Alignment in a grid" in the <a href="http://www.generative-gestaltung.de/2/">Generative Design</a> to SwiftUI.</p>
-<p><img alt="Alignment in a grid" src="/images/alignment_in_grid.png"></p>
+<p><img src="/images/alignment_in_grid.png" alt="Alignment in a grid" width="400" /></p>
 </article>
 
         <footer>
