--- a/custom-bindings.html
+++ b/custom-bindings.html
@@ -34,7 +34,7 @@
 </code></pre></div>
 
 <p>Here's a modification to my luminosity sketch from earlier, adding color to the mix.</p>
-<p><img alt="Selfie with Lines, Color" src="/images/selfie_lines_color.png"></p>
+<p><img src="/images/selfie_lines_color.png" alt="Selfie with Lines, Color" width="400" /></p>
 </article>
 
         <footer>
