--- a/drawing-challenges.html
+++ b/drawing-challenges.html
@@ -28,7 +28,7 @@
     <p>A wee bit more <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> done today. </p>
 <p>The challenges were very straightforward today, perhaps because Paul isn't expecting many people to be interested in 2d drawing. However, since I've been cranking away on this stuff anyways for my own interests in my <a href="https://github.com/alexshepard/generativeart">Generative Art</a> explorations, this coverage of drawing has been right up my alley.</p>
 <p>Meanwhile, I also re-skinned this blog and I'm wrapping up the final stages of the Color chapter of the <a href="http://www.generative-gestaltung.de/2/">Generative Design</a> book today. Here's a still from my implementation of the Color Palettes From Rules example in that book. I'm excited because this is as far as I'd gotten with that book previously. I never got around to tackling the later chapters on Shape, Type or Image. Now I'll be doing it in Swift!</p>
-<p><img alt="Color from rules" src="/images/color_from_rules.png"></p>
+<p><img src="/images/color_from_rules.png" alt="Color from rules" width="400" /></p>
 </article>
 
         <footer>
