--- a/environment-objects-and-tabs.html
+++ b/environment-objects-and-tabs.html
@@ -27,7 +27,7 @@
 <article>
     <p>Wrapped up another bit of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a>. Simple stuff today, just experimenting with <code>@EnvironmentObject</code> and then learning about the <code>TabBar</code> view. I've got plenty of experience with both of them, so it was a breeze. Meanwhile, I spent most of the day wrestling with IOMMU bullshit with my new computer vision training system at work.</p>
 <p>Change up for today's image. I spent a little bit of time reading about animation in Procreate and then drew this little bouncing ball. I haven't worked out how to use layers and animation at the same time, but I'm sure it's possible. Maybe layer groups or something? At any rate, this was fun and I'm looking forward to doing more.</p>
-<p><img alt="Animated bouncing blue ball" src="/images/bounce.png"></p>
+<p><img src="/images/bounce.png" alt="Animated bouncing blue ball" width="400" /></p>
 </article>
 
         <footer>
