--- a/fileprivate.html
+++ b/fileprivate.html
@@ -28,7 +28,7 @@
     <p>Two more days of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> wrapped up. At work I've been cranking away at TF2, TFLite, and CoreML stuff. It's been nice to be able to really focus on vision stuff this week.</p>
 <p>The most interesting thing for me the past few days has been the access modifiers, using <code>private</code> and <code>fileprivate</code> more on variables to enforce decoupling in my code. I definitely want to get into the habit of thinking about this stuff.</p>
 <p>For today's image I'm working on a sketch from the <a href="http://www.generative-gestaltung.de/2/">Generative Design book</a>, using agents to deform a circle and drawing it iteratively as the user drags around the screen. Running into an issue with closed CatmulRom splines, so I have more work to do there.</p>
-<p><img alt="Shapes from agents" src="/images/shapes_from_agents.png"></p>
+<p><img src="/images/shapes_from_agents.png" alt="Shapes from agents" width="400" /></p>
 </article>
 
         <footer>
