--- a/friendface-challenge.html
+++ b/friendface-challenge.html
@@ -28,7 +28,7 @@
     <p>We had a nice milestone day in <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> today. </p>
 <p>There was some helpful review of the topics we've covered the past two weeks, including a dive into <code>Group</code> vs <code>AnyView</code> and some insight into how to use <code>JSONDecoder</code> with custom key mappings. We also had a challenge to make a FriendFace app, which seemed a little daunting at first, but it was mostly just about using the skills we learned in the Moonshot project last week. I peeked ahead to see that tomorrow's challenge will be to migrate FriendFace to use CoreData. I'm looking forward that, since it's relevant to my work on iNat.</p>
 <p>Today's generative art image is a glitch caused by a bug. It's always cool to see how software bugs can produce unexpected results when making generative art. To me, this is one of the ways that generative art intersects with printmaking.</p>
-<p><img alt="Corridor glitch" src="/images/corridor_glitch.png"></p>
+<p><img src="/images/corridor_glitch.png" alt="Corridor glitch" width="400" /></p>
 </article>
 
         <footer>
