--- a/generative-art-mac.html
+++ b/generative-art-mac.html
@@ -27,7 +27,7 @@
 <article>
     <p>OK, back at the generative art stuff, working in Xcode 14 beta for MacOS. Very fun to be making SwiftUI apps with Canvas again. I'm also up to day 33 on <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> again, animations. And I'm getting back into the Japanese grind, 日本語 yay.</p>
 <p>Here's a bit of a glitch from my attempts at doing the Color Spectrum in a Grid sketch from <a href="http://www.generative-gestaltung.de/2/">Generative Design book</a> with Canvas and SwiftUI for Mac.</p>
-<p><img alt="Spectrum Glitch" src="/images/spectrum_glitch.png"></p>
+<p><img src="/images/spectrum_glitch.png" alt="Spectrum Glitch" width="400" /></p>
 </article>
 
         <footer>
