--- a/habit-tracker-milestone.html
+++ b/habit-tracker-milestone.html
@@ -28,7 +28,7 @@
     <p>Oh man, what a crazy day today. I got another day of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> done, but the big change for me was having my first day back in the office since before COVID.</p>
 <p>I had a lot of fun with the challenge today, but I struggled a little bit with incrementing the habit completion incrementer. Our <code>ObservableObject</code> activities is a class so it's mutable, and I can add and remove elements in its list of activities with no problem. But if each <code>Activity</code> is a struct, and that struct needs to have a modifiable element, then I guess we have to re-create the struct and re-insert it into the list? I definitely wasn't sure my implementation was ideal, but it works, so I guess I'm getting somewhere, right?</p>
 <p>Meanwhile, I'm wrapping up my work on the Color chapter in the <a href="http://www.generative-gestaltung.de/2/">Generative Design</a> book by re-implementing a few of the example sketches at the end of the chapter. Here's an example from my take on their Color Rules with Transparency sketch.</p>
-<p><img alt="Color rules with transparency" src="/images/color_rules_transparency.png"></p>
+<p><img src="/images/color_rules_transparency.png" alt="Color rules with transparency" width="400" /></p>
 </article>
 
         <footer>
