--- a/hacking-with-swift-live.html
+++ b/hacking-with-swift-live.html
@@ -27,7 +27,7 @@
 <article>
     <p>I got nothing done for <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> the past few days, because I was attending <a href="https://www.hackingwithswift.com/live">Hacking with Swift: Live!</a> all week. Tons of coverage of the new concurrency stuff in Swift 5.5, and a great community. It was a wonderful event, and it was nice to have a few days away from the grind of work.</p>
 <p>Here's a sketch I've been doodling with on my spare time this week - playing with effects on the luminosity of pixels from the camera.</p>
-<p><img alt="Selfie with lines" src="/images/selfie_lines.png"></p>
+<p><img src="/images/selfie_lines.png" alt="Selfie with lines" width="400" /></p>
 </article>
 
         <footer>
