--- a/more-codable.html
+++ b/more-codable.html
@@ -28,7 +28,7 @@
     <p>Yay, another day of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> wrapped up, and it's not even 10am. I'm going back into the office to do more work on iNat's new vision training server in a bit.</p>
 <p>Today in 100 Days of SwiftUI we got back to projects. The section on adding Codable conformance for @Published properties, or adding custom Codable conformance to any class, was helpful. Cool to see how the CodingKey type works to make Codable work without keying everything by strings. The second section on using URLSession with Codable data was fun. I followed along with the basic implementation, then did my own using techniques that I've already learned while experimenting with the Xcode beta: using <code>.task { }</code> on a view to do async work, then moving all my network code into an async fetch function to avoid callback hell, and finally using a Result type to return either <code>.success(myData)</code> or <code>.failure(myError)</code> from the data fetch function. Very fun.</p>
 <p>I also started on chapter two of <a href="http://www.generative-gestaltung.de/2/">Generative Design</a> in SwiftUI and started exploring shapes. Until now, all of our explorations have been with rectangles and color.</p>
-<p><img alt="Hello shapes" src="/images/hello_shapes.png"></p>
+<p><img src="/images/hello_shapes.png" alt="Hello shapes" width="400" /></p>
 </article>
 
         <footer>
