--- a/more-core-data.html
+++ b/more-core-data.html
@@ -28,7 +28,7 @@
     <p>Welp, today was not much easier than yesterday. When this heartburn hits it's pretty bad, I think it results in acid burns to my esophagus. It makes for a terrible few days until it all heals up. In the meantime it's just painful. I kept up with <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> though, and I did some more work on my SwiftUI iNat prototype. </p>
 <p>A few new things today, I hadn't setup unique constraints in Core Data in a long time so that was a nice refresher, and I don't remember the last time I configured a <code>moc</code>'s merge policy. I guess lately I've been using Realm more than Core Data.</p>
 <p>I tackled another generative art sketch from the <a href="http://www.generative-gestaltung.de/2/">Generative Design</a> book this afternoon. Swift helpers for <code>CGRect</code> like <code>.offsetBy()</code> and <code>.midX</code> are really coming in handy. </p>
-<p><img alt="Complex modules" src="/images/complex_modules_screen.png"></p>
+<p><img src="/images/complex_modules_screen.png" alt="Complex modules" width="400" /></p>
 </article>
 
         <footer>
