--- a/slightly-advanced-core-data.html
+++ b/slightly-advanced-core-data.html
@@ -66,7 +66,7 @@
 <span class="p">}</span>
 </code></pre></div>
 
-<p><img alt="Line modules" src="/images/line_modules.png"></p>
+<p><img src="/images/line_modules.png" alt="Line modules" width="400" /></p>
 </article>
 
         <footer>
