--- a/star-wars-swift.html
+++ b/star-wars-swift.html
@@ -28,7 +28,7 @@
     <p>I got another chunk of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> done today. I also started putting together the parts for the new iNat computer vision training server. It posted on the first try!</p>
 <p>No coding today for 100 Days of SwiftUI, just <a href="https://vimeo.com/295238750">a video</a> to watch. Some of it was a great reminder to pay more attention to the engineering side of software development, not just chasing fads or copying / reimplementing code from stack overflow without thinking about it. I know I've been guilty of this. The section on community and diversity within the Swift core team was also well said and worth a listen.</p>
 <p>Finally, I'm done with the Color chapter in the <a href="http://www.generative-gestaltung.de/2/">Generative Design</a> book. On to Shape!</p>
-<p><img alt="Color rules with radial gradients" src="/images/color_rules_radial.png"></p>
+<p><img src="/images/color_rules_radial.png" alt="Color rules with radial gradients" width="400" /></p>
 </article>
 
         <footer>
