--- a/swift-ui-project-3-day-2.html
+++ b/swift-ui-project-3-day-2.html
@@ -58,7 +58,7 @@
 </code></pre></div>
 
 <p>And voila:</p>
-<p><img alt="Swallowtail Flag" src="/images/swallowtail.png"></p>
+<p><img src="/images/swallowtail.png" alt="Swallowtail Flag" width="400" /></p>
 </article>
 
         <footer>
