--- a/core-image-plus-core-data-codable.html
+++ b/core-image-plus-core-data-codable.html
@@ -28,7 +28,7 @@
     <p>Another day of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> on the books. The UIViewControllerRepresentable stuff I'd done and seen before, but using Core Image filters was new to me. I feel like there's some wizardry to Core Image that'd help with my art stuff, but the learning curve is pretty steep. Kinda like it'll probably pay off to learn how to program shaders as I continue on this generative art journey. Added to the list.</p>
 <p>I spent most of the day grinding on my iNat SwiftUI prototype, tackling serialization and infinite scrolling. I was able to use an example from <a href="https://www.donnywals.com">Donny Wals</a>' book <a href="https://www.donnywals.com/books/">Practical Core Data</a> as a starting point to understand how think about combining Core Data and Codable into the same model class. Then I just had to get it to work the way I wanted to, not as a syncing background data importer job, but as an lightweight async/await extension on URLSession to fetch lots of JSON records from an API and automatically save them. It feels kinda awkward to be basically re-creating RestKit after all these years. 🥵 </p>
 <p>Another sketch from the <a href="http://www.generative-gestaltung.de/2/">Generative Design book</a> today, with colors from a Marin landscape photo I took last week.</p>
-<p><img alt="Darkening Circles" src="/images/darkening_circles.png"></p>
+<p><img src="/images/darkening_circles.png" alt="Darkening Circles" width="400" /></p>
 </article>
 
         <footer>
