--- a/meishi-with-mapkit.html
+++ b/meishi-with-mapkit.html
@@ -27,7 +27,8 @@
 <article>
     <p>Another day of <a href="https://www.hackingwithswift.com/100/swiftui">100 Days of SwiftUI</a> done. We had to integrate MapKit into the visiting card app that I named Meishi yesterday. I think the only tricky bit was handling optional locations in Core Data. 0, 0 is a <a href="https://en.wikipedia.org/wiki/Null_Island">legal location</a> in the world, so the default value for a double in Core Data of zero won't work. Instead, I set a custom default value of -180 for latitude and longitude in the model, which is what's in the latitude &amp; longitude values in <a href="https://developer.apple.com/documentation/corelocation/kcllocationcoordinate2dinvalid">kCLLocationCoordinate2DInvalid</a> so it's easy to check against at runtime.</p>
 <p>Today's image is a riff on the Dumb Agents sketch in the <a href="http://www.generative-gestaltung.de/2/">Generative Design book</a>. I changed the color &amp; density to feel like a blood clot, which is a thought that's always in the back of my mind.</p>
-<p><img alt="Clot, dumb agents" src="/images/clot.png"></p>
+<p><img src="/images/<img alt="Clot, dumb agents" src="/images/clot.png">
+.png" alt="Clot, dumb agents" width="400" /></p>
 </article>
 
         <footer>
