--- a/more-work-with-codable.html
+++ b/more-work-with-codable.html
@@ -42,7 +42,7 @@
 <span class="p">}</span>
 </code></pre></div>
 
-<p><img alt="Color Spectrum Grid" src="/images/color_spectrum_grid.png"></p>
+<p><img src="/images/color_spectrum_grid.png" alt="Color Spectrum Grid" width="400" /></p>
 </article>
 
         <footer>
